--- a/assets/base.css
+++ b/assets/base.css
@@ -95,21 +95,14 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
   margin: 0 auto;
 }
 
-.utility-bar__grid.page-width {
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
+
 
 @media screen and (min-width: 750px) {
   .page-width {
     padding: 0 5rem;
   }
 
-  .header.page-width,
-  .utility-bar__grid.page-width {
-    padding-left: 3.2rem;
-    padding-right: 3.2rem;
-  }
+  
 
   .page-width--narrow {
     padding: 0 9rem;
@@ -125,11 +118,6 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
 }
 
 @media screen and (min-width: 990px) {
-  .header:not(.drawer-menu).page-width {
-    padding-left: 5rem;
-    padding-right: 5rem;
-  }
-
   .page-width--narrow {
     max-width: 72.6rem;
     padding: 0;
@@ -1200,13 +1188,6 @@ button.shopify-payment-button__button--unbranded {
   position: relative;
 }
 
-.button,
-.shopify-challenge__button,
-.customer button,
-button.shopify-payment-button__button--unbranded {
-  min-width: calc(12rem + var(--buttons-border-width) * 2);
-  min-height: calc(4.5rem + var(--buttons-border-width) * 2);
-}
 
 .button,
 .shopify-challenge__button,
@@ -1215,7 +1196,6 @@ button.shopify-payment-button__button--unbranded {
   justify-content: center;
   align-items: center;
   border: 0;
-  padding: 0 3rem;
   cursor: pointer;
   font: inherit;
   font-size: 1.5rem;
@@ -2355,6 +2335,7 @@ input[type='checkbox'] {
   grid-template-areas: 'left-icons heading icons';
   grid-template-columns: 1fr 2fr 1fr;
   align-items: center;
+  padding-block: 1.00rem;
 }
 
 @media screen and (max-width: 749px) {
@@ -2390,8 +2371,8 @@ input[type='checkbox'] {
   }
 
   .header--middle-center:not(.drawer-menu) {
-    grid-template-areas: 'navigation heading icons';
-    grid-template-columns: 1fr auto 1fr;
+    grid-template-areas: 'navigation heading secondary-menu icons';
+    grid-template-columns: auto 1fr auto auto;
     column-gap: 2rem;
   }
 
@@ -2811,7 +2792,7 @@ details[open] > .header__submenu {
 }
 
 details[open] > .header__menu-item {
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 details[open] > .header__menu-item .icon-caret {
@@ -2826,7 +2807,7 @@ details[open] > .header__menu-item .icon-caret {
 }
 
 .header__menu-item:hover .header__active-menu-item {
-  text-decoration-thickness: 0.2rem;
+  text-decoration-thickness: 0.1rem;
 }
 
 .header__submenu {
