--- a/assets/component-menu-drawer.css
+++ b/assets/component-menu-drawer.css
@@ -32,7 +32,7 @@ menu-drawer > details[open] > summary::before {
   z-index: 3;
   left: 0;
   top: 100%;
-  width: 100%;
+  width: calc(100vw - 4rem);
   padding: 0;
   background-color: rgb(var(--color-background));
   overflow-x: hidden;
@@ -85,7 +85,7 @@ details[open].menu-opening > .menu-drawer__submenu {
 }
 
 .menu-drawer__navigation {
-  padding: 3rem 0;
+  padding: 5.6rem 0;
 }
 
 .menu-drawer__inner-submenu {
@@ -95,7 +95,7 @@ details[open].menu-opening > .menu-drawer__submenu {
 }
 
 .js .menu-drawer__menu li {
-  margin-bottom: 0.2rem;
+  margin-bottom: 0;
 }
 
 .menu-drawer__menu-item {
@@ -114,7 +114,7 @@ details[open].menu-opening > .menu-drawer__submenu {
 .menu-drawer__menu-item:hover,
 .menu-drawer__close-button:hover {
   color: rgb(var(--color-foreground));
-  background-color: rgba(var(--color-foreground), 0.04);
+  /* background-color: rgba(var(--color-foreground), 0.04); */
 }
 
 .menu-drawer__menu-item--active:hover {
