--- a/assets/section-rich-text.css
+++ b/assets/section-rich-text.css
@@ -60,7 +60,7 @@
 
 .rich-text__buttons {
   display: inline-flex;
-  justify-content: center;
+  justify-content: left;
   flex-wrap: wrap;
   gap: 1rem;
   width: 100%;
