--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -371,7 +371,7 @@
     --alpha-button-background: 0;
   }
 
-  .banner--desktop-transparent .content-container:after {
+  .banner--desktop-transparent  {
     display: none;
   }
 }
